--- a/front-end-patient-app/homescreen.html
+++ b/front-end-patient-app/homescreen.html
@@ -32,7 +32,7 @@
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
           <li class="nav-item active">
-            <a class="nav-link" href="homescreen.html">Book Appointment</a>
+            <a class="nav-link" href="homescreen.html">Book Appointment (outdated)</a>
           </li>
 
 
@@ -41,7 +41,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="serial.html">Record Data<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="appointment.html">Book Appointment<span class="sr-only">(current)</span></a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
