--- a/front-end-patient-app/videoCall.html
+++ b/front-end-patient-app/videoCall.html
@@ -47,13 +47,13 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="homescreen.html">Book Appointment<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="homescreen.html">Book Appointment (outdated)<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="videoCall.html">Doctor Consultation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="serial.html">Record Data<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="appointment.html">Book Appointment<span class="sr-only">(current)</span></a>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search"> -->
