--- a/front-end-patient-app/time_select.html
+++ b/front-end-patient-app/time_select.html
@@ -5,7 +5,7 @@
   <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-app.js"></script>
   <link rel="icon" href="MedVitaLogo.jpg">
 
-  <title>Welcome to Medvita</title>
+  <title>Select a Time</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="homescreen.css">
