renamed files @JacobLinder commit to master now

--- a/front-end-patient-app/appointment.html
+++ b/front-end-patient-app/appointment.html
@@ -41,8 +41,8 @@
     <div class="display-2 text-center text-light" id="message">How do you want to schedule?</div>
     <div class="container">
         <div class="text-center">
-    <a class="btn btn-outline-light mr-5 mt-5" id="btn1" href="doctor_select.html">Select a Doctor</a>
-    <a class="btn btn-outline-light ml-5 mt-5" id="btn2" href="time_select.html">Select a Time</a>
+    <a class="btn btn-outline-light mr-5 mt-5" id="btn1" href="doctorSelect.html">Select a Doctor</a>
+    <a class="btn btn-outline-light ml-5 mt-5" id="btn2" href="timeSelect.html">Select a Time</a>
         </div>
     </div>
 
