--- a/front-end-patient-app/timeSelect.html
+++ b/front-end-patient-app/timeSelect.html
@@ -285,7 +285,7 @@
 
   </div>
 
-  <script src="homescreen.js"></script>
+  <script src="timeSelect.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
