added sexyaditya to DoctorSelect ;)

--- a/front-end-patient-app/doctorSelect.html
+++ b/front-end-patient-app/doctorSelect.html
@@ -47,39 +47,46 @@
 
   <table>
     <tr>
+      <th></th>
       <th>Name</th>
       <th>Specialization</th>
       <th>Select</th>
     </tr>
     <tr>
+      <td><img src="sexyaditya.jpg"></td>
       <td>Aditya Patel</td>
-      <td>Maria Anders</td>
-      <td>Germany</td>
+      <td>Paleontology</td>
+      <td>Select</td>
     </tr>
     <tr>
+      <td><img src="sexyaditya.jpg"></td>
       <td>Aditya Kulkarni</td>
-      <td>Francisco Chang</td>
-      <td>Mexico</td>
+      <td>Gynecology</td>
+      <td>Select</td>
     </tr>
     <tr>
+      <td><img src="sexyaditya.jpg"></td>
       <td>Aditya Patki</td>
-      <td>Roland Mendel</td>
-      <td>Austria</td>
+      <td>Homosexuality</td>
+      <td>Select</td>
     </tr>
     <tr>
+      <td><img src="sexyaditya.jpg"></td>
       <td>Aditya Rajagopal</td>
-      <td>Helen Bennett</td>
-      <td>UK</td>
+      <td>Dallas Buyers Club</td>
+      <td>Select</td>
     </tr>
     <tr>
+      <td><img src="sexyaditya.jpg"></td>
       <td>Aditya Song</td>
-      <td>Yoshi Tannamuri</td>
-      <td>Canada</td>
+      <td>Neuroscience</td>
+      <td>Select</td>
     </tr>
     <tr>
+      <td><img src="sexyaditya.jpg"></td>
       <td>Aditya Mah</td>
-      <td>Giovanni Rovelli</td>
-      <td>Italy</td>
+      <td>Psychology</td>
+      <td>Select</td>
     </tr>
   </table>
 
