some CSS changes for doctorSelect

--- a/front-end-patient-app/doctorSelect.html
+++ b/front-end-patient-app/doctorSelect.html
@@ -8,7 +8,7 @@
   <title>Select a Doctor</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="homescreen.css">
+  <link rel="stylesheet" href="doctorSelect.css">
 
   <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-firestore.js"></script>
@@ -50,43 +50,43 @@
       <th></th>
       <th>Name</th>
       <th>Specialization</th>
-      <th>Select</th>
+      <th></th>
     </tr>
     <tr>
-      <td><img src="sexyaditya.jpg"></td>
-      <td>Aditya Patel</td>
-      <td>Paleontology</td>
-      <td>Select</td>
+      <td id="table-picture"><img src="sexyaditya.jpg"></td>
+      <td id="table-element">Aditya Patel</td>
+      <td id="table-element">Paleontology</td>
+      <td id="table-element">Select</td>
     </tr>
     <tr>
-      <td><img src="sexyaditya.jpg"></td>
-      <td>Aditya Kulkarni</td>
-      <td>Gynecology</td>
-      <td>Select</td>
+      <td id="table-picture"><img src="sexyaditya.jpg"></td>
+      <td id="table-element">Aditya Kulkarni</td>
+      <td id="table-element">Gynecology</td>
+      <td id="table-element">Select</td>
     </tr>
     <tr>
-      <td><img src="sexyaditya.jpg"></td>
-      <td>Aditya Patki</td>
-      <td>Homosexuality</td>
-      <td>Select</td>
+      <td id="table-picture"><img src="sexyaditya.jpg"></td>
+      <td id="table-element">Aditya Patki</td>
+      <td id="table-element">Homosexuality</td>
+      <td id="table-element">Select</td>
     </tr>
     <tr>
-      <td><img src="sexyaditya.jpg"></td>
-      <td>Aditya Rajagopal</td>
-      <td>Dallas Buyers Club</td>
-      <td>Select</td>
+      <td id="table-picture"><img src="sexyaditya.jpg"></td>
+      <td id="table-element">Aditya Rajagopal</td>
+      <td id="table-element">Dallas Buyers Club</td>
+      <td id="table-element">Select</td>
     </tr>
     <tr>
-      <td><img src="sexyaditya.jpg"></td>
-      <td>Aditya Song</td>
-      <td>Neuroscience</td>
-      <td>Select</td>
+      <td id="table-picture"><img src="sexyaditya.jpg"></td>
+      <td id="table-element">Aditya Song</td>
+      <td id="table-element">Neuroscience</td>
+      <td id="table-element">Select</td>
     </tr>
     <tr>
-      <td><img src="sexyaditya.jpg"></td>
-      <td>Aditya Mah</td>
-      <td>Psychology</td>
-      <td>Select</td>
+      <td id="table-picture"><img src="sexyaditya.jpg"></td>
+      <td id="table-element">Aditya Mah</td>
+      <td id="table-element">Psychology</td>
+      <td id="table-element">Select</td>
     </tr>
   </table>
 
