small css changes for doctorSelect

--- a/front-end-patient-app/doctorSelect.html
+++ b/front-end-patient-app/doctorSelect.html
@@ -53,37 +53,37 @@
       <th></th>
     </tr>
     <tr>
-      <td id="table-picture"><img src="sexyaditya.jpg"></td>
+      <td id="table-picture"><img class="resize" src="sexyaditya.jpg"></td>
       <td id="table-element">Aditya Patel</td>
       <td id="table-element">Paleontology</td>
       <td id="table-element">Select</td>
     </tr>
     <tr>
-      <td id="table-picture"><img src="sexyaditya.jpg"></td>
+      <td id="table-picture"><img class="resize" src="sexyaditya.jpg"></td>
       <td id="table-element">Aditya Kulkarni</td>
       <td id="table-element">Gynecology</td>
       <td id="table-element">Select</td>
     </tr>
     <tr>
-      <td id="table-picture"><img src="sexyaditya.jpg"></td>
+      <td id="table-picture"><img class="resize" src="sexyaditya.jpg"></td>
       <td id="table-element">Aditya Patki</td>
       <td id="table-element">Homosexuality</td>
       <td id="table-element">Select</td>
     </tr>
     <tr>
-      <td id="table-picture"><img src="sexyaditya.jpg"></td>
+      <td id="table-picture"><img class="resize" src="sexyaditya.jpg"></td>
       <td id="table-element">Aditya Rajagopal</td>
       <td id="table-element">Dallas Buyers Club</td>
       <td id="table-element">Select</td>
     </tr>
     <tr>
-      <td id="table-picture"><img src="sexyaditya.jpg"></td>
+      <td id="table-picture"><img class="resize" src="sexyaditya.jpg"></td>
       <td id="table-element">Aditya Song</td>
       <td id="table-element">Neuroscience</td>
       <td id="table-element">Select</td>
     </tr>
     <tr>
-      <td id="table-picture"><img src="sexyaditya.jpg"></td>
+      <td id="table-picture"><img class="resize" src="sexyaditya.jpg"></td>
       <td id="table-element">Aditya Mah</td>
       <td id="table-element">Psychology</td>
       <td id="table-element">Select</td>
