doctorSelect framework much better now

--- a/front-end-patient-app/doctorSelect.html
+++ b/front-end-patient-app/doctorSelect.html
@@ -50,40 +50,48 @@
       <th>Doctor</th>
       <th>Specialization</th>
       <th></th>
-      <th></th>
     </tr>
     <tr>
-      <td id="table-picture">
-        <span style="float: center">Aditya Patel</span>
-        <span style="float: left"><img class="resize" src="sexyaditya.jpg"></span>
+      <td><img class="resize" src="sexyaditya.jpg">Aditya Patel</td>
+      <td>Paleontology</td>
+      <td>
+        <button class="btn btn-primary" type="button" id="button"> Select</button>
         </td>
-      <td id="table-element">Paleontology</td>
-      <td id="table-element">Select</td>
     </tr>
     <tr>
-      <td id="table-picture"><img class="resize" src="sexyaditya.jpg">Aditya Kulkarni</td>
-      <td id="table-element">Gynecology</td>
-      <td id="table-element">Select</td>
+      <td><img class="resize" src="sexyaditya.jpg">Aditya Kulkarni</td>
+      <td>Gynecology</td>
+      <td>
+        <button class="btn btn-primary" type="button" id="button"> Select</button>
+        </td>
     </tr>
     <tr>
-      <td id="table-picture"><img class="resize" src="sexyaditya.jpg">Aditya Patki</td>
-      <td id="table-element">Homosexuality</td>
-      <td id="table-element">Select</td>
+      <td><img class="resize" src="sexyaditya.jpg">Aditya Patki</td>
+      <td>Homosexuality</td>
+      <td>
+        <button class="btn btn-primary" type="button" id="button"> Select</button>
+        </td>
     </tr>
     <tr>
-      <td id="table-picture"><img class="resize" src="sexyaditya.jpg">Aditya Rajagopal</td>
-      <td id="table-element">Dallas Buyers Club</td>
-      <td id="table-element">Select</td>
+      <td><img class="resize" src="sexyaditya.jpg">Aditya Rajagopal</td>
+      <td>Dallas Buyers Club</td>
+      <td>
+        <button class="btn btn-primary" type="button" id="button"> Select</button>
+        </td>
     </tr>
     <tr>
-      <td id="table-picture"><img class="resize" src="sexyaditya.jpg">Aditya Song</td>
-      <td id="table-element">Neuroscience</td>
-      <td id="table-element">Select</td>
+      <td><img class="resize" src="sexyaditya.jpg">Aditya Song</td>
+      <td>Neuroscience</td>
+      <td>
+        <button class="btn btn-primary" type="button" id="button"> Select</button>
+        </td>
     </tr>
     <tr>
-      <td id="table-picture"><img class="resize" src="sexyaditya.jpg">Aditya Mah</td>
-      <td id="table-element">Psychology</td>
-      <td id="table-element">Select</td>
+      <td><img class="resize" src="sexyaditya.jpg">Aditya Mah</td>
+      <td>Psychology</td>
+      <td>
+        <button class="btn btn-primary" type="button" id="button"> Select</button>
+        </td>
     </tr>
   </table>
 
