Adds in database to the tables

--- a/front-end-patient-app/doctorSelect.html
+++ b/front-end-patient-app/doctorSelect.html
@@ -46,53 +46,7 @@
   </div>
 
   <table>
-    <tr>
-      <th>Doctor</th>
-      <th>Specialization</th>
-      <th></th>
-    </tr>
-    <tr>
-      <td><img class="resize" src="sexyaditya.jpg">Aditya Patel</td>
-      <td>Paleontology</td>
-      <td>
-        <button class="btn btn-primary" type="button" id="button"> Select</button>
-        </td>
-    </tr>
-    <tr>
-      <td><img class="resize" src="sexyaditya.jpg">Aditya Kulkarni</td>
-      <td>Gynecology</td>
-      <td>
-        <button class="btn btn-primary" type="button" id="button"> Select</button>
-        </td>
-    </tr>
-    <tr>
-      <td><img class="resize" src="sexyaditya.jpg">Aditya Patki</td>
-      <td>Homosexuality</td>
-      <td>
-        <button class="btn btn-primary" type="button" id="button"> Select</button>
-        </td>
-    </tr>
-    <tr>
-      <td><img class="resize" src="sexyaditya.jpg">Aditya Rajagopal</td>
-      <td>Dallas Buyers Club</td>
-      <td>
-        <button class="btn btn-primary" type="button" id="button"> Select</button>
-        </td>
-    </tr>
-    <tr>
-      <td><img class="resize" src="sexyaditya.jpg">Aditya Song</td>
-      <td>Neuroscience</td>
-      <td>
-        <button class="btn btn-primary" type="button" id="button"> Select</button>
-        </td>
-    </tr>
-    <tr>
-      <td><img class="resize" src="sexyaditya.jpg">Aditya Mah</td>
-      <td>Psychology</td>
-      <td>
-        <button class="btn btn-primary" type="button" id="button"> Select</button>
-        </td>
-    </tr>
+    <div class="DocShow"></div>
   </table>
 
   <script src="doctorSelect.js"></script>
