changing table in doctorSelect to be responsive. the app will now refresh when code is added/changed :-)

--- a/front-end-patient-app/doctorSelect.html
+++ b/front-end-patient-app/doctorSelect.html
@@ -44,7 +44,200 @@
     </nav>
 
   </div>
+  <div class="row align-items-center mb-5">
+    <div class="col">
 
+      <!-- Heading -->
+      <h4 class="font-weight-bold mb-1">
+        Design & UX
+      </h4>
+
+      <!-- Text -->
+      <p class="font-size-sm text-muted mb-0">
+        User experience and design are top priorities at Landkit.
+      </p>
+
+    </div>
+    <div class="col-auto">
+
+      <!-- Badge -->
+      <span class="badge badge-pill badge-success-soft">
+        <span class="h6 text-uppercase">4 openings</span>
+      </span>
+
+    </div>
+  </div> <!-- / .row -->
+  <div class="row">
+    <div class="col-12">
+
+      <!-- Table -->
+      <div class="table-responsive mb-7 mb-md-9">
+        <table class="table table-align-middle">
+          <thead>
+            <tr>
+              <th>
+                <span class="h6 text-uppercase font-weight-bold">
+                  Role
+                </span>
+              </th>
+              <th>
+                <span class="h6 text-uppercase font-weight-bold">
+                  Team
+                </span>
+              </th>
+              <th>
+                <span class="h6 text-uppercase font-weight-bold">
+                  Location
+                </span>
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+
+                <a href="career-single.html" class="text-reset text-decoration-none">
+                  <div class="col-auto">
+
+                    <!-- Avatar -->
+                    <div class="avatar avatar-xl">
+                      <img class="avatar-img rounded-circle" src="assets/img/avatars/avatar-3.jpg" alt="...">
+                    </div>
+                    <div class="col-6 ml-n5">
+
+                      <!-- Heading -->
+                      <p class="mb-0">
+                        Dianna Smiley
+                      </p>
+                    </div>
+
+                  </div>
+                  
+                </a>
+
+              </td>
+              <td>
+
+                <a href="career-single.html" class="text-reset text-decoration-none">
+                  <p class="font-size-sm mb-0">
+                    Consumer
+                  </p>
+                </a>
+
+              </td>
+              <td>
+
+                <a href="career-single.html" class="text-reset text-decoration-none">
+                  <p class="font-size-sm mb-0">
+                    Los Angeles
+                  </p>
+                </a>
+
+              </td>
+            </tr>
+            <tr>
+              <td>
+
+                <a href="career-single.html" class="text-reset text-decoration-none">
+                  <p class="mb-1">
+                    Motion Designer
+                  </p>
+                  <p class="font-size-sm text-muted mb-0">
+                    Responsible for creating life in our apps.
+                  </p>
+                </a>
+
+              </td>
+              <td>
+
+                <a href="career-single.html" class="text-reset text-decoration-none">
+                  <p class="font-size-sm mb-0">
+                    Product
+                  </p>
+                </a>
+
+              </td>
+              <td>
+
+                <a href="career-single.html" class="text-reset text-decoration-none">
+                  <p class="font-size-sm mb-0">
+                    San Francisco, CA
+                  </p>
+                </a>
+
+              </td>
+            </tr>
+            <tr>
+              <td>
+
+                <a href="career-single.html" class="text-reset text-decoration-none">
+                  <p class="mb-1">
+                    Design Researcher
+                  </p>
+                  <p class="font-size-sm text-muted mb-0">
+                    Help us make the best decisions with qualitative experiments.
+                  </p>
+                </a>
+
+              </td>
+              <td>
+
+                <a href="career-single.html" class="text-reset text-decoration-none">
+                  <p class="font-size-sm mb-0">
+                    Consulting
+                  </p>
+                </a>
+
+              </td>
+              <td>
+
+                <a href="career-single.html" class="text-reset text-decoration-none">
+                  <p class="font-size-sm mb-0">
+                    London
+                  </p>
+                </a>
+
+              </td>
+            </tr>
+            <tr>
+              <td>
+
+                <a href="career-single.html" class="text-reset text-decoration-none">
+                  <p class="mb-1">
+                    Production Designer
+                  </p>
+                  <p class="font-size-sm text-muted mb-0">
+                    Create, collect, and distribute beautiful assets.
+                  </p>
+                </a>
+
+              </td>
+              <td>
+
+                <a href="career-single.html" class="text-reset text-decoration-none">
+                  <p class="font-size-sm mb-0">
+                    Consulting
+                  </p>
+                </a>
+
+              </td>
+              <td>
+
+                <a href="career-single.html" class="text-reset text-decoration-none">
+                  <p class="font-size-sm mb-0">
+                    Paris
+                  </p>
+                </a>
+
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+
+    </div>
+  </div> <!-- / .row -->
+  <!--
   <table>
     <tr>
       <th>Doctor</th>
@@ -52,48 +245,49 @@
       <th></th>
     </tr>
     <tr>
-      <td><img class="resize" src="sexyaditya.jpg">Aditya Patel</td>
+      <td><img class="resize" hspace="30" vspace="30" src="sexyaditya.jpg">Aditya Patel</td>
       <td>Paleontology</td>
       <td>
         <button class="btn btn-primary" type="button" id="button"> Select</button>
-        </td>
+      </td>
     </tr>
     <tr>
       <td><img class="resize" src="sexyaditya.jpg">Aditya Kulkarni</td>
       <td>Gynecology</td>
       <td>
         <button class="btn btn-primary" type="button" id="button"> Select</button>
-        </td>
+      </td>
     </tr>
     <tr>
       <td><img class="resize" src="sexyaditya.jpg">Aditya Patki</td>
-      <td>Homosexuality</td>
+      <td>Pediatrician</td>
       <td>
         <button class="btn btn-primary" type="button" id="button"> Select</button>
-        </td>
+      </td>
     </tr>
     <tr>
       <td><img class="resize" src="sexyaditya.jpg">Aditya Rajagopal</td>
       <td>Dallas Buyers Club</td>
       <td>
         <button class="btn btn-primary" type="button" id="button"> Select</button>
-        </td>
+      </td>
     </tr>
     <tr>
       <td><img class="resize" src="sexyaditya.jpg">Aditya Song</td>
       <td>Neuroscience</td>
       <td>
         <button class="btn btn-primary" type="button" id="button"> Select</button>
-        </td>
+      </td>
     </tr>
     <tr>
       <td><img class="resize" src="sexyaditya.jpg">Aditya Mah</td>
       <td>Psychology</td>
       <td>
         <button class="btn btn-primary" type="button" id="button"> Select</button>
-        </td>
+      </td>
     </tr>
   </table>
+-->
 
   <script src="doctorSelect.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
