--- a/front-end-patient-app/timeSelect.html
+++ b/front-end-patient-app/timeSelect.html
@@ -55,8 +55,8 @@
 
           <h1 class="Display">Create an Appointment</h1>
 
-          <form class="needs-validation" novalidate>
-            <div class="form-row">
+          <!--<form class="needs-validation" novalidate>-->
+            <!--<div class="form-row">
               <div class="col-md-6 mb-3">
                 <label for="validationCustom01">First name</label>
                 <input type="text" class="form-control" id="FName" value="" required>
@@ -184,7 +184,7 @@
                 </div>
               </div>
 
-            </div>
+            </div>-->
             <!-- <div class="form-group">
               <div class="form-check">
                 <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
@@ -197,10 +197,12 @@
               </div>
               
             </div> -->
-            <button class="btn btn-primary" type="button" id="button" onclick="addApp()"><span
+            <!--<button class="btn btn-primary" type="button" id="button" onclick="addApp()"><span
                 class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span> Create
-              Appointment</button>
-          </form>
+              Appointment</button>-->
+          <!--</form>-->
+
+          <div id="CalShow"></div>
 
 
           <div class="alert alert-success alert-dismissible hidden fade" id="appAlert" role="alert">
@@ -257,7 +259,7 @@
                 <div id="patientBox">
                   <h3 class='Patient'>Your upcoming appointment: </h3>
 
-                  <div class='AppShow'></div>
+                  <div class='CalShow'></div>
 
                 </div>
 
