Functioning calendar (more or less)

--- a/front-end-patient-app/timeSelect.html
+++ b/front-end-patient-app/timeSelect.html
@@ -45,7 +45,21 @@
     </nav>
 
   </div>
+
+
+
+
+
+
+  <button id="previousWeekBtn">Previous</button>
+  <button id="nextWeekBtn">Next</button>
   <div class='CalShow'></div>
+
+
+
+
+
+
   <div id="appointment">
     <div class="container">
 
