--- a/front-end-patient-app/timeSelect.html
+++ b/front-end-patient-app/timeSelect.html
@@ -53,6 +53,7 @@
 
   <button id="previousWeekBtn">Previous</button>
   <button id="nextWeekBtn">Next</button>
+  <button id="confirmBtn">Confirm</button>
   <div class='CalShow'></div>
 
 
