Scheduler updates and file restructuring

--- a/front-end-patient-app/scheduler/doctorSelect.html
+++ b/front-end-patient-app/scheduler/doctorSelect.html
@@ -8,11 +8,11 @@
   <title>Select a Doctor</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="doctorSelect.css">
+  <link rel="stylesheet" href="./doctorSelect.css">
 
   <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-auth.js"></script>
   <script src="https://www.gstatic.com/firebasejs/7.14.5/firebase-firestore.js"></script>
-  <script src="init-firebase-auth.js"></script>
+  <script src="../init-firebase-auth.js"></script>
 
 
 </head>
@@ -32,13 +32,13 @@
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
           <li class="nav-item">
-            <a class="nav-link" href="appointment.html">Back</a>
+            <a class="nav-link" href="./appointment.html">Back</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
           <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search"> -->
           <!-- <button class="btn btn-outline-primary my-2 my-sm-0" type="button">Logout</button> -->
-          <a class="btn btn-outline-light" href="login.html" role="button">Logout</a>
+          <a class="btn btn-outline-light" href="../login.html" role="button">Logout</a>
         </form>
       </div>
     </nav>
@@ -49,7 +49,7 @@
     <div class="DocShow"></div>
   </table>
 
-  <script src="doctorSelect.js"></script>
+  <script src="./doctorSelect.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
     crossorigin="anonymous"></script>
