--- a/front-end-patient-app/homescreen.html
+++ b/front-end-patient-app/homescreen.html
@@ -41,7 +41,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="appointment.html">Book Appointment<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="scheduler/appointment.html">Book Appointment<span class="sr-only">(current)</span></a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
