--- a/front-end-patient-app/scheduler/appointment.html
+++ b/front-end-patient-app/scheduler/appointment.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Book Appointment</title>
-    <link rel="icon" href="../MedVitaLogo.jpg">
+    <link rel="icon" href="~/MedVitaLogo.jpg">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="appointment.css">
@@ -20,18 +20,18 @@
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" href="homescreen.html">Book Appointment (outdated)<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="../homescreen.html">Book Appointment (outdated)<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="videoCall.html">Doctor Consultation<span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="../videoCall.html">Doctor Consultation<span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="appointment.html">Book Appointment</a>
+                        <a class="nav-link" href="./appointment.html">Book Appointment</a>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                     <!-- <input class="form-control mr-sm-2" type="search" placeholder="Search"> -->
                     <!-- <button class="btn btn-outline-primary my-2 my-sm-0" type="button">Logout</button> -->
-                    <a class="btn btn-outline-light" href="login.html" role="button">Logout</a>
+                    <a class="btn btn-outline-light" href="../login.html" role="button">Logout</a>
                 </form>
             </div>
         </nav>
@@ -41,8 +41,8 @@
     <div class="display-2 text-center text-light" id="message">How do you want to schedule?</div>
     <div class="container">
         <div class="text-center">
-    <a class="btn btn-outline-light mr-5 mt-5" id="btn1" href="doctorSelect.html">Select a Doctor</a>
-    <a class="btn btn-outline-light ml-5 mt-5" id="btn2" href="timeSelect.html">Select a Time</a>
+    <a class="btn btn-outline-light mr-5 mt-5" id="btn1" href="./doctorSelect.html">Select a Doctor</a>
+    <a class="btn btn-outline-light ml-5 mt-5" id="btn2" href="./timeSelect.html">Select a Time</a>
         </div>
     </div>
 
