Scheduler works with doctor overlay

--- a/front-end-patient-app/signup.html
+++ b/front-end-patient-app/signup.html
@@ -34,14 +34,12 @@
 
 
     <h1 class="display-3 text-center m-5">Welcome to Medvita!</h1>
-    <h3 class="display-5 px-5 pb-5">Please enter you email below to get notified of future updates and releases:</h1>
 
 
     <div class="container">
 
 
-
-      <!-- <form class="needs-validation" novalidate>
+<form class="needs-validation" novalidate>
         <div class="form-row">
           <div class="col-md-6 mb-3">
             <label for="fname">First name</label>
@@ -310,7 +308,7 @@
               Please provide a valid postal code.
             </div>
           </div>
-        </div> -->
+        </div>
         <div class="form-row">
 
           <div class="col-md-12 mb-3">
@@ -321,7 +319,6 @@
             </div>
           </div>
 
-    <!-- 
           <div class="col-md-6 mb-3">
             <label for="password">Password</label>
             <input type="password" class="form-control" id="password" required>
@@ -336,7 +333,6 @@
               Please provide a valid password.
             </div>
           </div>
-        -->
         </div> 
         <div class="form-group">
           <div class="form-check">
